<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#D5EEF1"
    tools:context=".SelectDifficultyActivity">

    <ImageButton
        android:layout_width="@dimen/_80dp"
        android:layout_height="@dimen/_50dp"
        android:id="@+id/difficultyCrossBtn"
        android:src="@drawable/cross"
        android:scaleType="fitCenter"
        android:layout_marginTop="@dimen/_5dp"
        android:padding="@dimen/_5dp"
        android:background="@android:color/transparent"
        android:layout_alignParentEnd="true"
        >

    </ImageButton>

    <TextView
        android:id="@+id/selectDiffText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/difficultyCrossBtn"
        android:layout_marginTop="@dimen/_30sp"
        android:textStyle="bold"
        android:textSize="@dimen/_40sp"
        android:gravity="center"
        android:text="@string/select_difficulty"
        >

    </TextView>

    <Button
        android:id="@+id/easyDifButton"
        android:layout_width="@dimen/_300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/selectDiffText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_50dp"
        android:text="@string/easy_difficulty"
        android:textSize="@dimen/_20sp"
        >
    </Button>

    <Button
        android:id="@+id/mediumDifButton"
        android:layout_width="@dimen/_300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/easyDifButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_30sp"
        android:text="@string/medium_difficulty"
        android:textSize="@dimen/_20sp"
        >
    </Button>

    <Button
        android:id="@+id/hardDifButton"
        android:layout_width="@dimen/_300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/mediumDifButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_30sp"
        android:text="@string/hard_difficulty"
        android:textSize="@dimen/_20sp"
        >
    </Button>

</RelativeLayout>