<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    tools:context=".VictoryActivity"
    >

    <TextView
        android:id="@+id/congratsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/congratulations_you_won"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:textSize="@dimen/_50sp"
        android:textColor="#fffbbb"
        android:shadowColor="#000000"
        android:shadowDx="7.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:textStyle="bold|italic"
        >
    </TextView>

    <Button
        android:id="@+id/newGameButton"
        android:layout_width="@dimen/_190dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15dp"
        android:layout_marginStart="@dimen/_10dp"
        android:layout_below="@id/congratsTextView"
        android:text="@string/new_game"
        android:textSize="@dimen/_18sp"
        >
    </Button>

    <Button
        android:id="@+id/mainMenuButton"
        android:layout_width="@dimen/_190dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15dp"
        android:layout_marginTop="@dimen/_15dp"
        android:layout_below="@id/congratsTextView"
        android:layout_toEndOf="@id/newGameButton"
        android:text="@string/to_main_menu"
        android:textSize="@dimen/_18sp"
        >
    </Button>

</RelativeLayout>